<resources>
    <string name="app_name">TimeLogger</string>
    <string name="no_data">No data</string>
    <string name="title_activity_activities" translatable="false">TasksActivity</string>
    <string name="mainActivityButton">Go to tasks list</string>
    <string name="activitiesListToolbarText">Tasks</string>
    <string name="addRecordButtonText">Add</string>
    <string name="editActivityButtonText">Edit</string>
    <string name="removeActivityButtonText">Remove</string>
    <string name="settingsButtonText">Settings</string>
    <string name="newTaskDataLabel">Enter new task\'s data</string>
    <string name="taskName">Task name</string>
    <string name="add_task_description">Task description</string>
    <string name="colorPickerText">Choose color</string>
    <string name="taskNameLabel">Task name</string>
    <string name="taskDescriptionLabel">Task Description</string>
    <string name="addColorTextView">Choose color</string>
    <string name="addTaskButtonText">Add Task</string>
    <string name="cancelTaskAddButtonText">Cancel</string>
    <string name="colorButtonText" translatable="false" />
    <string name="name_cannot_be_null">Name cannot be null</string>
    <string name="emptyDescriptionConfirmationLabel">Add with empty description?</string>
    <string name="yesButtonText">Yes</string>
    <string name="noButtonText">No</string>
    <string name="emptyDescriptionPopupTitle">Empty Description</string>
    <string name="pickColorToast">Pick a color</string>
    <string name="taskSavedToast">Task Saved</string>
    <string name="validationSuccessFul">Validation Successful</string>
    <string name="taskExists">Activity with that name exists</string>
    <string name="taskNameExists">Task name already exists</string>
    <string name="taskValidationSuccessful">Task validation successful</string>
    <string name="taskNameEmpty">Task name cannot be empty</string>
    <string name="taskColorEmpty">Task color cannot be empty</string>
    <string name="taskIdEmpty">Update task id cannot be null</string>
    <string name="validationUnsuccessful">Validation unsuccessful</string>
    <string name="warningMessage">Warning</string>
    <string name="removeTaskConfirmTitle">Are you sure?</string>
    <string name="removeTaskConfirmLabel">Do you really want to delete this task?</string>
    <string name="chooseTaskFirstToast">Choose a task first</string>
    <string name="chooseStartTimeButtonText" translatable="false">Button</string>
    <string name="chooseStartDateButtonText" translatable="false">Button</string>
    <string name="chooseDateTimeButtonText" translatable="false">Button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dateTimeTextViewText" translatable="false">Hello blank fragment</string>
    <string name="startFragmentHeaderText">Pick start date and time</string>
    <string name="endFragmentHeaderText">Pick end date and time</string>
    <string name="addRecordConfirmButtonText">Add record</string>
    <string name="addRecordCancelButtonText">Cancel</string>
    <string name="addRecordHeaderText">Add new Record</string>
    <string name="updateTaskButtonText">Update Task</string>
    <string name="recordSaved">Record saved!</string>
    <string name="startTimeNull">Start time cannot be null</string>
    <string name="endTimeNull">End time null</string>
    <string name="recordsTaskNull">Record\'s task cannot be null</string>
    <string name="endDateBeforeStart">End date is before start date</string>
    <string name="startEndEqual">Task cannot take 0 hours</string>
    <string name="recordValidationMsgBoxHeader">Record not saved</string>
    <string name="recordsRepresentationText">Records representation</string>
    <string name="sliderTitleText">Visible days</string>
    <string name="displayGraphicsButtonText">Graphics</string>
    <string name="recordStartTimeSummaryText">"Start: "</string>
    <string name="recordEndtimeSummaryText">"End: "</string>
    <string name="selectLanguageHeader">Select language</string>
    <string name="dataLoadingTextView">Loading data from server</string>
    <string name="taskSyncType">Synchronizing tasks…</string>
    <string name="recordSyncType">Synchronizing records…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dateRangeButtonText">Select date range</string>
</resources>
