<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    tools:context="timelogger.mprtcz.com.timelogger.activities.AddTaskActivity">

    <TextView
        android:id="@+id/addActivityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/newTaskDataLabel" />

    <TextView
        android:id="@+id/addActivityNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_gravity="end"
        android:layout_row="1"
        android:text="@string/taskNameLabel" />

    <EditText
        android:id="@+id/taskNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="5dp"
        android:layout_row="1"
        android:hint="@string/taskName" />

    <TextView
        android:id="@+id/addActivityDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_gravity="end"
        android:layout_row="2"
        android:text="@string/taskDescriptionLabel" />

    <EditText
        android:id="@+id/taskDescriptionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="50dp"
        android:layout_row="2"
        android:hint="@string/add_task_description"
        android:maxWidth="150dp" />

    <TextView
        android:id="@+id/addActivityColorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_gravity="end"
        android:layout_row="3"
        android:text="@string/addColorTextView" />

    <Button
        android:text="@string/colorButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:layout_marginEnd="5dp"
        android:id="@+id/pickColorButton"
        android:textColor="#ffffff"
        android:onClick="onPickColorButtonClicked"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="6"
        android:layout_columnSpan="2"
        android:gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <Button
            android:text="@string/addTaskButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/addTaskConfButton"
            android:textColor="#ffffff"
            style="?android:attr/borderlessButtonStyle"
            android:onClick="onAddTaskButtonClicked"/>

        <Button
            android:text="@string/cancelTaskAddButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:layout_marginStart="5dp"
            android:id="@+id/cancelAddTaskButton"
            android:textColor="#ffffff"
            style="?android:attr/borderlessButtonStyle"
            android:onClick="onCancelAddTaskButtonClicked" />
    </LinearLayout>
</GridLayout>
