<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_activities_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/selectableItemBackground"
    tools:context="timelogger.mprtcz.com.timelogger.activities.TasksListActivity">

    <ListView
        android:id="@+id/activitiesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:listSelector="@drawable/list_selector"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:id="@+id/footer"
        style="@android:style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addRecordButton"
            style="@style/FooterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_add_white_24dp"
            android:onClick="onAddRecordButtonClicked"
            android:text="@string/addRecordButtonText"/>

        <Button
            android:id="@+id/editTaskButton"
            style="@style/FooterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_create_white_24dp"
            android:onClick="onEditTaskButtonClicked"
            android:text="@string/editActivityButtonText" />

        <Button
            android:id="@+id/removeTaskButton"
            style="@style/FooterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_clear_white_24dp"
            android:onClick="onRemoveTaskButtonClicked"
            android:text="@string/removeActivityButtonText" />

        <Button
            android:id="@+id/displayGraphicButton"
            style="@style/FooterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_insert_photo_white_24dp"
            android:onClick="onGraphicButtonClicked"
            android:text="@string/displayGraphicsButtonText" />

        <Button
            android:id="@+id/settingsButton"
            style="@style/FooterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_settings_white_24dp"
            android:onClick="onSettingsButtonClicked"
            android:text="@string/settingsButtonText" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/footer"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:onClick="onAddTaskButtonClicked"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_add_white_18dp" />
    </FrameLayout>

</RelativeLayout>
