<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_activities_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="timelogger.mprtcz.com.timelogger.activities.ActivitiesListActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activitiesList"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <LinearLayout android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@color/colorPrimary"
        style="@android:style/ButtonBar">

        <Button android:id="@+id/addRecordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/ic_add_white_18dp"
            style="?android:attr/borderlessButtonStyle"
            android:foreground="?android:attr/selectableItemBackground"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:text="@string/addRecordButtonText" />

        <Button android:id="@+id/editActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/ic_create_white_18dp"
            style="?android:attr/borderlessButtonStyle"
            android:foreground="?android:attr/selectableItemBackground"
            android:textColor="#ffffff"
            android:text="@string/editActivityButtonText" />

        <Button android:id="@+id/removeActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/ic_clear_white_18dp"
            style="?android:attr/borderlessButtonStyle"
            android:foreground="?android:attr/selectableItemBackground"
            android:textColor="#ffffff"
            android:text="@string/removeActivityButtonText" />

        <Button android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/ic_settings_white_18dp"
            style="?android:attr/borderlessButtonStyle"
            android:foreground="?android:attr/selectableItemBackground"
            android:textColor="#ffffff"
            android:text="@string/settingsButtonText" />
    </LinearLayout>

</RelativeLayout>
