<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<GridLayout
    android:id="@+id/activity_add_record"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="5"
    android:gravity="center"
    tools:context="timelogger.mprtcz.com.timelogger.activities.AddRecordActivity">

    <TextView
        android:id="@+id/addRecordHeader"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/addRecordHeaderText" />

    <fragment
        android:id="@+id/startDatetimeFragment"
        class="timelogger.mprtcz.com.timelogger.fragments.DateTimeFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_rowWeight="1"
        android:layout_row="1" />

    <fragment
        android:id="@+id/endDatetimeFragment"
        class="timelogger.mprtcz.com.timelogger.fragments.DateTimeFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_rowWeight="1"
        android:layout_row="2" />

    <TextView
        android:id="@+id/newRecordSummaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_rowWeight="1"
        android:layout_row="3" />

    <Button
        android:id="@+id/addRecordConfirmButton"
        android:onClick="onAddRecordConfirmButtonClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="end|top"
        android:layout_margin="10dp"
        android:layout_row="4"
        android:text="@string/addRecordConfirmButtonText"
        android:theme="@style/PrimaryColorButton" />

    <Button
        android:id="@+id/addRecordCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onAddRecordCancelButtonClicked"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="start|top"
        android:layout_margin="10dp"
        android:layout_row="4"
        android:text="@string/addRecordCancelButtonText" />
</GridLayout>
</ScrollView>